@@ -6,44 +6,60 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.8'
     id "io.freefair.lombok" version "5.0.0-rc6"
 }
-sourceCompatibility = '13'
-targetCompatibility = '13'
-mainClassName = 'edu.wpi.leviathans.Main'
+
+mainClassName = 'edu.wpi.cs3733.d20.teamL.Main'
 
 repositories {
     mavenCentral()
     jcenter()
-    maven {
-        url 'https://apisite.crmyers.dev/maven'
-    }
+    google()
+    maven {url 'https://www.jitpack.io'}
+    maven {url 'https://apisite.crmyers.dev/maven'}
 }
 
 dependencies {
     implementation(
+            [group: 'edu.wpi.cs3733.c20.teamR', name: 'AppointmentRequest', version:'5.0.0'],
             'com.jfoenix:jfoenix:9.0.9',
-
-            // You may comment out the database dependency you do not use
-            'org.xerial:sqlite-jdbc:3.30.1',
-            //'org.apache.derby:derby:10.14.2.0',
-
+            'mysql:mysql-connector-java:8.0.20',
+            'org.apache.derby:derby:10.14.2.0',
+            'org.apache.commons:commons-csv:1.8',
             'org.slf4j:slf4j-api:1.7.30',
             'org.slf4j:slf4j-simple:1.7.30',
+            'com.google.inject:guice:4.2.2',
+            'com.twilio.sdk:twilio:7.49.1',
+            'com.sendgrid:sendgrid-java:4.4.1',
+            'com.github.kenglxn.QRGen:javase:2.6.0',
+            'org.jetbrains:annotations:15.0',
+            'com.github.kenglxn.QRGen:javase:2.6.0',
+            'org.mindrot:jbcrypt:0.3m'
     )
 
     testImplementation(
             'org.junit.jupiter:junit-jupiter:5.6.0',
-            'org.testfx:testfx-junit5:4.0.16-alpha',
+            'org.testfx:testfx-junit5:4.0.16-alpha'
     )
     testRuntimeOnly(
-            'org.testfx:openjfx-monocle:jdk-12.0.1+2',
+            'org.testfx:openjfx-monocle:jdk-11+26'
     )
 }
 
 javafx {
-    version = "13"
-    modules = ['javafx.controls', 'javafx.fxml']
+    version = "11.0.1"
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing']
+
 }
 
+run {
+    jvmArgs = ['--add-opens=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
+               '--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
+               '--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
+               '--add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED',
+               '--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
+               '--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+               '--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED'
+    ]
+}
 
 test {
     useJUnitPlatform()
@@ -59,8 +75,8 @@ jar {
 }
 
 def codeCoverageExcludes = [
-        'edu.wpi.teamname.App',
-        'edu.wpi.teamname.Main',
+        'edu.wpi.cs3733.d20.teamL.App',
+        'edu.wpi.cs3733.d20.teamL.Main',
 ]
 
 jacoco {
@@ -77,8 +93,8 @@ jacocoTestCoverageVerification {
                 minimum = 1.0
             }
             excludes = [
-                    'edu.wpi.leviathans.App',
-                    'edu.wpi.leviathans.Main',
+                    'edu.wpi.cs3733.d20.teamL.App',
+                    'edu.wpi.cs3733.d20.teamL.Main',
             ]
         }
 
@@ -90,8 +106,8 @@ jacocoTestCoverageVerification {
                 minimum = 0.25
             }
             excludes = [
-                    'edu.wpi.leviathans.App',
-                    'edu.wpi.leviathans.Main',
+                    'edu.wpi.cs3733.d20.teamL.App',
+                    'edu.wpi.cs3733.d20.teamL.Main',
             ]
         }
 
@@ -103,20 +119,22 @@ jacocoTestCoverageVerification {
                 minimum = 0.25
             }
             excludes = [
-                    'edu.wpi.leviathans.App',
-                    'edu.wpi.leviathans.Main',
+                    'edu.wpi.cs3733.d20.teamL.App',
+                    'edu.wpi.cs3733.d20.teamL,Main',
             ]
         }
     }
 }
 
-check.dependsOn jacocoTestCoverageVerification
+// Uncomment if test cases actually matter
+//check.dependsOn jacocoTestCoverageVerification
 jacocoTestCoverageVerification.dependsOn jacocoTestReport
-compileJava.dependsOn 'spotlessApply'
+
+/*compileJava.dependsOn 'spotlessApply'
 
 // uncomment to enable spotless checking
 spotless {
     java {
         // googleJavaFormat()
     }
-}
+}*/
